added end points for pagination and filter